# common-notes

./: cmake_rules.md  create_path_floder.cpp  find_available_port.cpp
miot/: CMakeLists.txt
miot/CBLPlugin/: CBLPlugin.pro  CBLPlugin_global.h  CMakeLists.txt  cblinterface.h  cblplugin.cpp  cblplugin.h  cblplugin.json  fhir_resources.h
miot/CalculatePlugin/: CMakeLists.txt  CalculatePlugin.pro  CalculatePlugin_global.h  calculateinterface.h  calculateplugin.cpp  calculateplugin.h  calculateplugin.json
miot/DDSPlugin/: CMakeLists.txt  DDSPlugin.pro  DDSPlugin_global.h  ddsinterface.h  ddsplugin.cpp  ddsplugin.h  ddsplugin.json  listeners.h
miot/PluginInterface/: PluginInterface.pro  plugininterface.h
miot/PluginManager/: CMakeLists.txt  PluginManager.pro  pluginmanager.cpp  pluginmanager.h  pluginmanager.json  pluginmanagerinterface.h  pluginspec.cpp  pluginspec.h
miot/PluginManagerTest/: PluginManagerTest.pro  Test.xml  main.cpp  testpubobject.cpp  testpubobject.h  testsubobject.cpp  testsubobject.h  widget.cpp  widget.h  widget.ui
miot/UtilsPlugin/: CMakeLists.txt  UtilsPlugin.pro  UtilsPlugin_global.h  utilsinterface.h  utilsplugin.cpp  utilsplugin.h  utilsplugin.json
